# IMEI_check

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  asgi.py  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: cbd160e38a2e_test_auth_data.py  cc8ac5d2bfd7_first_tables.py
back/: config.py  logging.py  main.py
back/dataclass/: __init__.py  imei.py  imei_check.py  imei_sandbox_check.py
back/db/: base.py  decorator.py  utils.py
back/db/bynary/: __init__.py  request.py
back/db/orm/: auth.py
back/db/sql/: __init__.py  check_accsess.py  database_structure.py
back/routers/: __init__.py  imei_check.py  imei_check_sandbox.py
back/schema/: __init__.py  base_schema.py  permission.py
back/utils/: __init__.py  build_database.py  headers.py  imei_requests.py
tests/tools/: Dockerfile  bot.yaml  test-database.yaml
