[project]
name = "imei-check"
version = "0.1.0"
description = "test task 25.01.2025"
authors = [
    {name = "Dmitriy Boyarinov",email = "boyar.d@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit (>=4.1.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
